fix: add @types/react and @types/react-dom to devDependencies

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   }
 }
